--- a/wookie/package.json
+++ b/wookie/package.json
@@ -16,9 +16,12 @@
     "@mui/material": "^5.14.0",
     "@mui/styled-engine-sc": "^5.12.0",
     "axios": "^1.4.0",
+    "css-loader": "^6.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.11"
+    "react-router-dom": "^6.14.2",
+    "styled-components": "^5.3.11",
+    "styles-loader": "^4.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
